compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__adding_annotations_prints_contextual_types4.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1952
expression: "\nimport wibble as wobble\n\npub fn main() {\n  let value = wobble.Wibble\n}\n"
---
----- BEFORE ACTION

import wibble as wobble

pub fn main() {
  let value = wobble.Wibble
  ▔▔▔▔▔▔▔▔▔▔↑              
}


----- AFTER ACTION

import wibble as wobble

pub fn main() {
  let value: wobble.Wibble = wobble.Wibble
}
