compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1618
expression: "\npub fn add_curry(a) {\n  fn(b) { a + b }\n}\n"
---
----- BEFORE ACTION

pub fn add_curry(a) {
  fn(b) { a + b }
  ▔▔▔↑           
}


----- AFTER ACTION

pub fn add_curry(a) {
  fn(b: Int) -> Int { a + b }
}
