compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_anonymous_function_with_annotated_return_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1631
expression: "\npub fn add_curry(a) {\n  fn(b) -> Int { a + b }\n}\n"
---
----- BEFORE ACTION

pub fn add_curry(a) {
  fn(b) -> Int { a + b }
  ▔▔▔↑                  
}


----- AFTER ACTION

pub fn add_curry(a) {
  fn(b: Int) -> Int { a + b }
}
