compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_constant.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1724
expression: "\npub const my_constant = 20\n"
---
----- BEFORE ACTION

pub const my_constant = 20
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION

pub const my_constant: Int = 20
