compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1566
expression: "\npub fn add_one(thing) {\n  thing + 1\n}\n"
---
----- BEFORE ACTION

pub fn add_one(thing) {
    ▔▔▔▔▔▔▔▔▔▔↑        
  thing + 1
}


----- AFTER ACTION

pub fn add_one(thing: Int) -> Int {
  thing + 1
}
