compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_function_with_annotated_return_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1579
expression: "\npub fn add_one(thing) -> Int {\n  thing + 1\n}\n"
---
----- BEFORE ACTION

pub fn add_one(thing) -> Int {
    ▔▔▔▔▔▔▔▔▔▔↑               
  thing + 1
}


----- AFTER ACTION

pub fn add_one(thing: Int) -> Int {
  thing + 1
}
