compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_function_with_partially_annotated_parameters.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1592
expression: "\npub fn add(a: Float, b) -> Float {\n  a +. b\n}\n"
---
----- BEFORE ACTION

pub fn add(a: Float, b) -> Float {
    ▔▔▔▔▔▔↑                       
  a +. b
}


----- AFTER ACTION

pub fn add(a: Float, b: Float) -> Float {
  a +. b
}
