compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_local_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1746
expression: "\npub fn main() {\n  let my_value = 10\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let my_value = 10
  ▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn main() {
  let my_value: Int = 10
}
