compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_local_variable_let_assert.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1789
expression: "\npub fn fallible() -> Result<Int, Nil> {\n  todo\n}\n\npub fn main() {\n  let assert Ok(value) = fallible()\n}\n"
---
----- BEFORE ACTION

pub fn fallible() -> Result<Int, Nil> {
  todo
}

pub fn main() {
  let assert Ok(value) = fallible()
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑           
}


----- AFTER ACTION

pub fn fallible() -> Result<Int, Nil> {
  todo
}

pub fn main() {
  let assert Ok(value): Result(Int, Nil) = fallible()
}
